--- a/ui/controls/disk-selector.reel/_disk-selector.css
+++ b/ui/controls/disk-selector.reel/_disk-selector.css
@@ -1,12 +1,12 @@
 :root {
     --topologyItemMaxHeight: 15em;
-    --topologyItemBg: #2F3233;
+    --topologyItemBg: var(--grey);
 }
 
 .DiskSelector {
     position: relative;
     z-index: 1;
-    background: #2F3233;
+    background: var(--grey);
     display: flex;
     flex-direction: column;
     min-height: 2em;
@@ -30,7 +30,7 @@ Title
     line-height: 1.7em;
     padding: 0 1em;
     font-weight: 400;
-    background: #232629;
+    background: var(--grey-blue);
     border-top: 2px solid currentColor;
     overflow: hidden;
     /* set to hide behind dropZone overlay */
