--- a/ui/controls/labeled-icon.reel/default-icon.reel/_default-icon.css
+++ b/ui/controls/labeled-icon.reel/default-icon.reel/_default-icon.css
@@ -1,5 +1,5 @@
 .DefaultIcon {
-    background: #ccc;
+    background: var(--grey-2);
     border-radius: 9999px;
     /* $fix - need to change how this works with js */
     width: 100% !important;
