--- a/ui/inspectors/calendar.reel/calendar-list.reel/calendar-list-day.reel/_calendar-list-day.css
+++ b/ui/inspectors/calendar.reel/calendar-list.reel/calendar-list-day.reel/_calendar-list-day.css
@@ -8,7 +8,7 @@
 
 .CalendarListDay-date {
     font-weight: 400;
-    color: #B1BCBE;
+    color: var(--grey-2);
     font-size: 1em;
     margin-bottom: .5rem;
 }
