--- a/ui/controls/disk-selector.reel/disk-selector-dropzone.reel/_disk-selector-dropzone.css
+++ b/ui/controls/disk-selector.reel/disk-selector-dropzone.reel/_disk-selector-dropzone.css
@@ -57,7 +57,7 @@
     }
 
     &.acceptDrop:after {
-        color: #fff;
+        color: var(--white);
         box-shadow: 0 0 0 1px #1E963F,
                     0 2px 2px rgba(0,0,0,.3);
         background: #1E963F;
