--- a/ui/controls/topology.reel/topology-dropzone.reel/_topology-dropzone.css
+++ b/ui/controls/topology.reel/topology-dropzone.reel/_topology-dropzone.css
@@ -1,5 +1,5 @@
 .TopologyDropZone {
-    color: rgba(255,255,255,.2);
+    color: var(--transparent--lighten);
     border-radius: 4px;
 
     &:after {
@@ -58,7 +58,7 @@
     }
 
     &.acceptDrop:after {
-        color: #fff;
+        color: var(--white);
         box-shadow: 0 0 0 1px #1E963F,
                     0 2px 2px rgba(0,0,0,.3);
         background: #1E963F;
