--- a/ui/controls/tree-view.reel/child-node.reel/_child-node.css
+++ b/ui/controls/tree-view.reel/child-node.reel/_child-node.css
@@ -7,8 +7,8 @@
     user-select: none;
 
     &.is-selected {
-        background-color: #2089d3;
-        color: #fff;
+        background-color: var(--blue-lighten-2);
+        color: var(--white);
     }
 }
 
