--- a/ui/dashboard/widgets/widget-icon.reel/_widget-icon.css
+++ b/ui/dashboard/widgets/widget-icon.reel/_widget-icon.css
@@ -5,7 +5,7 @@
     width:  2em;
     padding: .15em;
     border-radius: 4px;
-    background: rgba(255,255,255,.1);
+    background: var(--transparent--lighten);
     border: 2px solid transparent;
 }
 
@@ -21,7 +21,7 @@
     border-radius: .5rem;
     padding: 0.2em 0.45em .25em;
     font-size: 0.7em;
-    background: #B1BCBE;
+    background: var(--grey-2);
     color: #000;
     line-height: 1em;
     box-shadow: 0 2px 2px rgba(0,0,0,.3);
@@ -33,7 +33,7 @@
 .WidgetIcon.has-critical .WidgetIcon-badge,
 .WidgetIcon.has-info .WidgetIcon-badge,
 .WidgetIcon.has-warning .WidgetIcon-badge {
-    color: #fff;
+    color: var(--white);
 }
 
 
@@ -44,9 +44,9 @@
 .WidgetIcon.has-warning                     { border-color:     #D95B1B;}
 
 
-.WidgetIcon.has-critical .WidgetIcon-badge { background-color: #E0003A; }
+.WidgetIcon.has-critical .WidgetIcon-badge { background-color: var(--red); }
 .WidgetIcon.has-critical,
-.WidgetIcon.has-error                      { border-color:     #E0003A; }
+.WidgetIcon.has-error                      { border-color:     var(--red); }
 
 .WidgetIcon-badge.has-value,
 .WidgetIcon-badge.is-executing {
