--- a/ui/dashboard/widgets/widget.reel/_widget.css
+++ b/ui/dashboard/widgets/widget.reel/_widget.css
@@ -6,7 +6,7 @@
     display: flex;
     height: 15em;
     flex-direction: column;
-    background: #16171A;
+    background: var(--main-bg-color);
     border-radius: var(--widget-border-radius);
     overflow: hidden;
     box-shadow: 0px 0px 2px 2px rgba(43,156,216,0);
