--- a/ui/drawer.reel/drawer-item.reel/_drawer-item.css
+++ b/ui/drawer.reel/drawer-item.reel/_drawer-item.css
@@ -35,7 +35,7 @@
     position: relative;
     height: var(--drawer-height);
     width: var(--drawer-width);
-    background: #16171A;
+    background: var(--main-bg-color);
     overflow: hidden;
     border-bottom-left-radius:  4px;
     border-bottom-right-radius: 4px;
