--- a/ui/icons/disk.reel/_disk.css
+++ b/ui/icons/disk.reel/_disk.css
@@ -27,9 +27,9 @@
 
     &:hover:before { border: 1px solid #939E9F; }
 
-    @nest .selected &:before { border: 1px solid #2b9cd8; }
+    @nest .selected &:before { border: 1px solid var(--color-selected); }
 
-    &:active:before { border: 1px solid #2b9cd8; }
+    &:active:before { border: 1px solid var(--color-selected); }
 }
 
 .DiskIcon-mediaSize {
@@ -63,12 +63,12 @@
     padding: 0 .15em .1em;
     background: var(--orange, #bb8e00);
     border-radius: .25em;
-    color: #fff;
+    color: var(--white);
     margin-bottom: .15em;
     box-shadow: 0 2px 2px rgba(0,0,0,.25);
 }
 
-.DiskIcon-state-offline { background-color: #E0003A; }
+.DiskIcon-state-offline { background-color: var(--red); }
 
 .DiskIcon-smartStatus {
     position: absolute;
@@ -86,7 +86,7 @@
     }
 
     & .smartStatus-fail {
-        color: #E0003A;
+        color: var(--red);
 
         &:after,
         &:before {
