--- a/ui/inspectors/inspector.reel/_inspector.css
+++ b/ui/inspectors/inspector.reel/_inspector.css
@@ -48,11 +48,11 @@
     display: none;
     position: relative;
     width: 100%;
-    background: #E0003A;
+    background: var(--red);
     padding: .5em;
     padding-top: .2em;
     font-weight: 300;
-    color: #fff;
+    color: var(--white);
     border-bottom-left-radius:  4px;
     border-bottom-right-radius: 4px;
 }
@@ -79,7 +79,7 @@
     position: absolute;
     text-align: center;
     line-height: 1em;
-    color: #FFF;
+    color: var(--white);
     padding: 1em;
     left: 50%;
     top:  50%;
