--- a/ui/inspectors/inspector.reel/inspector-confirmation.reel/_inspector-confirmation.css
+++ b/ui/inspectors/inspector.reel/inspector-confirmation.reel/_inspector-confirmation.css
@@ -6,7 +6,7 @@
 .InspectorConfirmation-message {
     margin-bottom: 2rem;
     font-size: 1.25em;
-    color: #fff;
+    color: var(--white);
 }
 
 .InspectorConfirmation-actions {
