--- a/ui/main-sidebar/main-navigation.reel/main-navigation-item.reel/_main-navigation-item.css
+++ b/ui/main-sidebar/main-navigation.reel/main-navigation-item.reel/_main-navigation-item.css
@@ -16,9 +16,9 @@
 }
 
 .MainNavigationItem.selected {
-    color: #FFF;
+    color: var(--white);
     text-shadow: 0 1px 0 rgba(0,0,0,.5);
-    background: #2B9CD8;
+    background: var(--color-selected);
 }
 
 @media (min-height: 40em) {
@@ -35,7 +35,7 @@
     color: #0090D3;
 
     @nest .selected & {
-        color: #fff;
+        color: var(--white);
     }
 }
 
