cleans up sign-in modal

--- a/ui/sign-in.reel/_sign-in.css
+++ b/ui/sign-in.reel/_sign-in.css
@@ -16,10 +16,8 @@
     background-position: center;
     z-index: 1000;
     transition: visibility .75s, opacity .25s .5s;
-}
 
-.montage-Overlay--visible .SignIn {
-    opacity: 1;
+    @nest .montage-Overlay--visible & { opacity: 1; }
 }
 
 .SignIn-content {
@@ -32,28 +30,27 @@
     border-radius: 4px;
     transition: transform .75s cubic-bezier(.62,-0.45,.93,.81);
     overflow: hidden;
+
+    /* needed to fix background-image bleed on border radius */
+
+    &:before {
+        background-color: rgba(255, 255, 255, .075);
+        position: absolute;
+        content: '';
+        top:    0;
+        left:   0;
+        right:  0;
+        bottom: 0;
+        z-index: -1;
+    }
+
+    /* error state */
+    @nest .SignIn.had-error &           { animation: denied .5s ease-in-out; }
+
+    /* visible state */
+    @nest .montage-Overlay--visible &   { transform: scale(1); }
+
 }
-
-/* needed to fix background-image bleed on border radius */
-
-.SignIn-content:before {
-    background-color: rgba(255, 255, 255, .075);
-    position: absolute;
-    content: '';
-    top:    0;
-    left:   0;
-    right:  0;
-    bottom: 0;
-    z-index: -1;
-}
-
-/* error state */
-
-.SignIn.had-error .SignIn-content { animation: denied .5s ease-in-out; }
-
-/* visible state */
-
-.montage-Overlay--visible .SignIn-content { transform: scale(1); }
 
 /* Logo */
 
@@ -87,25 +84,6 @@
         position: relative;
         overflow: hidden;
     }
-}
-
-/* field message */
-
-.field-message {
-    display: none;
-}
-
-/* error states*/
-
-.SignIn.hasError .field-message {
-    color: rgba(255,0,0,.8);
-    display: block;
-    margin-bottom: 1em;
-}
-
-.field.field-hasError input {
-    border: 1px solid rgba(255,0,0,.8);
-    background: rgba(255,0,0,.075);
 }
 
 /* Error Message */
